log/build_2020-11-17_14-04-00/Torcs_5/stderr.log
  File "/home/rtos/dev_ws/install/Torcs_5/lib/python3.8/site-packages/Torcs_5/splash/component/source_linear_x.py", line 27
    self.write("source_x, new_msg)
                                 ^
SyntaxError: EOL while scanning string literal

